[tool.poetry]
name = "chess-upgraded"
version = "0.1.0"
description = ""
authors = ["UmarlyPoeta <pkozlowski@student.agh.edu.pl>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
colorama = "^0.4.6"
termcolor = "^2.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
